force-app/main/default/objects/TMS_Users__c/TMS_Users__c.object-meta.xml
<CustomObject>
    <label>TMS User</label>
    <nameField>
        <label>TMS User Email Address</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TMS Users</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>