force-app/main/default/objects/TMS_Users__c/fields/Other_Telephone_No__c.field-meta.xml
<CustomField>
    <fullName>Other_Telephone_No__c</fullName>
    <label>Other Telephone No.</label>
    <type>Phone</type>
</CustomField>