force-app/main/default/objects/TMS_Users__c/recordTypes/User_Record.recordType-meta.xml
<RecordType>
    <fullName>User_Record</fullName>
    <active>true</active>
    <description>TMS ticketing user record</description>
    <label>User Record</label>
</RecordType>