force-app/main/default/objects/TMS_Users__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Location_Name__c</columns>
    <columns>Position__c</columns>
    <columns>Telephone_No__c</columns>
    <columns>Other_Telephone_No__c</columns>
    <columns>Manager__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>